package com.Kursach.bookingsystem;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

public class SeatSelection extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_seat_selection);
    }
}